[workspace]
members = ["packages/*"]

[workspace.package]
authors    = ["larry <gm@larry.engineer>"]
edition    = "2021"
homepage   = "https://larry.engineer"
repository = "https://github.com/larry0x/cw-plus-plus"
license    = "Apache-2.0"
version    = "3.0.1"
keywords   = ["cosmos", "cosmwasm"]

[workspace.dependencies]
cosmwasm-schema   = "3.0.1"
cosmwasm-std      = "3.0.1"
cw-address-like   = { version = "3.0.1", path = "./packages/address-like" }
cw-ownable-derive = { version = "3.0.1", path = "./packages/ownable/derive" }
cw-storage-plus   = "3.0.0"
cw-utils          = "3.0.0"
proc-macro2       = "1"
quote             = "1"
serde             = { version = "1", default-features = false }
syn               = "1"
thiserror         = "1"
